src/pod_db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    app: shiny-db
spec:
  containers:
  - name: shiny-db-container
    image: 'postgres'
    ports:
    - containerPort: 5432
