src/clusterIP.yaml
apiVersion: v1
kind: Service
metadata: 
    name: shiny-db-svc
spec:
  selector:
    app: shiny-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
