src/loadbalancer-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-loadbalancer-text
spec:
  selector:
    app: shiny-pod-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
