src/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-nodeport
spec:
  selector:
    app: shiny
  ports:
    - protocol: TCP
      port: 60
      targetPort: 80
  type: NodePort
