src/nodeport-service81.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-nodeport81
spec:
  selector:
    app: shiny81
  ports:
    - protocol: TCP
      port: 61
      targetPort: 81
  type: NodePort
